tests/ui/unsafe/wrapping-unsafe-block-sugg.stderr
error: call to unsafe function is unsafe and requires unsafe block (error E0133)
  --> $DIR/wrapping-unsafe-block-sugg.rs:9:5
   |
LL |     unsf();
   |     ^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
note: an unsafe function restricts its caller, but its body is safe by default
  --> $DIR/wrapping-unsafe-block-sugg.rs:7:1
   |
LL | pub unsafe fn foo() {
   | ^^^^^^^^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/wrapping-unsafe-block-sugg.rs:3:9
   |
LL | #![deny(unsafe_op_in_unsafe_fn)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: call to unsafe function is unsafe and requires unsafe block (error E0133)
  --> $DIR/wrapping-unsafe-block-sugg.rs:12:5
   |
LL |     unsf();
   |     ^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: dereference of raw pointer is unsafe and requires unsafe block (error E0133)
  --> $DIR/wrapping-unsafe-block-sugg.rs:19:13
   |
LL |     let y = *x;
   |             ^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior
note: an unsafe function restricts its caller, but its body is safe by default
  --> $DIR/wrapping-unsafe-block-sugg.rs:17:1
   |
LL | pub unsafe fn bar(x: *const i32) -> i32 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: dereference of raw pointer is unsafe and requires unsafe block (error E0133)
  --> $DIR/wrapping-unsafe-block-sugg.rs:22:9
   |
LL |     y + *x
   |         ^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error: use of mutable static is unsafe and requires unsafe block (error E0133)
  --> $DIR/wrapping-unsafe-block-sugg.rs:30:13
   |
LL |     let y = BAZ;
   |             ^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior
note: an unsafe function restricts its caller, but its body is safe by default
  --> $DIR/wrapping-unsafe-block-sugg.rs:28:1
   |
LL | pub unsafe fn baz() -> i32 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: use of mutable static is unsafe and requires unsafe block (error E0133)
  --> $DIR/wrapping-unsafe-block-sugg.rs:33:9
   |
LL |     y + BAZ
   |         ^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error: aborting due to 6 previous errors

